🐛Fixed linking issues in `2020-11-23-intro.md`

--- a/blog/2020-11-23-intro.md
+++ b/blog/2020-11-23-intro.md
@@ -9,7 +9,7 @@ image: ../static/img/title.jpg
 tags: [carefree-learn]
 ---
 
-`carefree-learn` is a minimal Automatic Machine Learning (AutoML) solution for tabular datasets based on PyTorch. It is the 2nd-place winner in the Global PyTorch Summer Hackathon 2020. The library is [documented](docs) and you can try it out after [installing it](docs/getting-started/installation).
+`carefree-learn` is a minimal Automatic Machine Learning (AutoML) solution for tabular datasets based on PyTorch. It is the 2nd-place winner in the Global PyTorch Summer Hackathon 2020. The library is [documented](https://carefree0910.me/carefree-learn-doc/docs) and you can try it out after [installing it](https://carefree0910.me/carefree-learn-doc/docs/getting-started/installation).
 
 + [GitHub](https://github.com/carefree0910/carefree-learn)
 + [YouTube](https://www.youtube.com/watch?v=hMzLmwmdQ_k&t=10s)
@@ -37,7 +37,7 @@ m = cflearn.make("awesome_model").fit(x, y)
 ```
 
 :::note
-Please refer to [Quick Start](docs/getting-started/quick-start) and [Build Your Own Models](docs/developer-guides/customization) for more details.
+Please refer to [Quick Start](https://carefree0910.me/carefree-learn-doc/docs/getting-started/quick-start) and [Build Your Own Models](https://carefree0910.me/carefree-learn-doc/docs/developer-guides/customization) for more details.
 :::
 
 You may argue that other libraries, like scikit-learn, also support building models in one line of code. But think about the messy stuffs (such as reading data from files, exploring data, performing data pre-processing, etc.) we need to do before we actually use these libraries, and contributing algorithms to these libraries is often much harder than writing your own ones. In carefree-learn, we've tried hard to ease these two procedures for you.
@@ -68,20 +68,20 @@ This is mainly handled by [carefree-data](https://github.com/carefree0910/carefr
 :::
 
 :::tip
-Please refer to [Quick Start](docs/getting-started/quick-start) for more details.
+Please refer to [Quick Start](https://carefree0910.me/carefree-learn-doc/docs/getting-started/quick-start) for more details.
 :::
 
 ### Carefree developing
 
 Thanks to the great modularization provided by [PyTorch](https://pytorch.org/), `carefree-learn` was able to design its (tabular datasets oriented) pipeline in a user-friendly as well as a developer-friendly way.
 
-The basic component in `carefree-learn` is called a [`pipe`](docs/design-principles#pipe), which corresponds to one of those *branches* which takes in all / part of the inputs, apply some [`transform`](docs/design-principles#transform), extract some features with [`extractor`](docs/design-principles#extractor), and then feed the final network ([`head`](docs/design-principles#head)) with these features. Here's an example:
+The basic component in `carefree-learn` is called a [`pipe`](https://carefree0910.me/carefree-learn-doc/docs/design-principles#pipe), which corresponds to one of those *branches* which takes in all / part of the inputs, apply some [`transform`](https://carefree0910.me/carefree-learn-doc/docs/design-principles#transform), extract some features with [`extractor`](https://carefree0910.me/carefree-learn-doc/docs/design-principles#extractor), and then feed the final network ([`head`](https://carefree0910.me/carefree-learn-doc/docs/design-principles#head)) with these features. Here's an example:
 
 ![Pipe](../static/img/pipe.png)
 
 Since most of the deep learning models (neural networks) used in tabular datasets could be represented with `pipe`, developers can therefore focus on implementing one of its components (namely `extractor` and `head`), instead of having to care about the whole pipeline.
 
-We've provided a detailed documention on [how to build your own models](docs/developer-guides/customization), as well as an interesting [example](docs/user-guides/examples#operations) to guide you step by step. Please feel free to check them out and enjoy yourself!
+We've provided a detailed documention on [how to build your own models](https://carefree0910.me/carefree-learn-doc/docs/developer-guides/customization), as well as an interesting [example](https://carefree0910.me/carefree-learn-doc/docs/user-guides/examples#operations) to guide you step by step. Please feel free to check them out and enjoy yourself!
 
 
 ## Why PyTorch?
@@ -91,7 +91,7 @@ The reason why I choosed [PyTorch](https://pytorch.org/) has already been mentio
 
 ## Getting Started
 
-We've provided an [Installation Guide](docs/getting-started/installation) as well as some real life [Examples](docs/user-guides/examples) to walk you through the basic / advanced usages of carefree-learn. We've also provided a [Production Guide](docs/user-guides/production) to show how could we pack the whole pipeline in carefree-learn efficiently into a zip file.
+We've provided an [Installation Guide](https://carefree0910.me/carefree-learn-doc/docs/getting-started/installation) as well as some real life [Examples](https://carefree0910.me/carefree-learn-doc/docs/user-guides/examples) to walk you through the basic / advanced usages of carefree-learn. We've also provided a [Production Guide](https://carefree0910.me/carefree-learn-doc/docs/user-guides/production) to show how could we pack the whole pipeline in carefree-learn efficiently into a zip file.
 
 
 ## AutoML on Iris
@@ -146,11 +146,11 @@ predictions = unpacked.pattern.predict(x)
 ```
 
 :::note
-Please refer to our [documentation](docs/user-guides/auto-ml) for more details.
+Please refer to our [documentation](https://carefree0910.me/carefree-learn-doc/docs/user-guides/auto-ml) for more details.
 :::
 
 ## Conclusion
 
-Contained in this article is just a subset of the features that carefree-learn offers. Additional capabilities include [Distributed Training](docs/user-guides/distributed#distributed-training), onnx export for [Production](docs/user-guides/production), and more.
+Contained in this article is just a subset of the features that carefree-learn offers. Additional capabilities include [Distributed Training](https://carefree0910.me/carefree-learn-doc/docs/user-guides/distributed#distributed-training), onnx export for [Production](https://carefree0910.me/carefree-learn-doc/docs/user-guides/production), and more.
 
-To learn more about carefree-learn, check out the [Examples](docs/user-guides/examples) with jupyter notebooks included, as well as the [Developer's Guide](docs/developer-guides/customization) to see how do we customize models with carefree-learn. We sincerely hope that carefree-learn could help you either deal with tabular datasets easier or develop new algorithms on tabular datasets easier, and any contributions to carefre-learn would truly be welcomed.
+To learn more about carefree-learn, check out the [Examples](https://carefree0910.me/carefree-learn-doc/docs/user-guides/examples) with jupyter notebooks included, as well as the [Developer's Guide](https://carefree0910.me/carefree-learn-doc/docs/developer-guides/customization) to see how do we customize models with carefree-learn. We sincerely hope that carefree-learn could help you either deal with tabular datasets easier or develop new algorithms on tabular datasets easier, and any contributions to carefre-learn would truly be welcomed.
