--- a/blog/2020-11-23-intro.md
+++ b/blog/2020-11-23-intro.md
@@ -149,7 +149,7 @@ predictions = unpacked.pattern.predict(x)
 Please refer to our [documentation](https://carefree0910.me/carefree-learn-doc/docs/user-guides/auto-ml) for more details.
 :::
 
-## Conclusion
+## Conclusions
 
 Contained in this article is just a subset of the features that carefree-learn offers. Additional capabilities include [Distributed Training](https://carefree0910.me/carefree-learn-doc/docs/user-guides/distributed#distributed-training), onnx export for [Production](https://carefree0910.me/carefree-learn-doc/docs/user-guides/production), and more.
 
