--- a/blog/2020-11-23-intro.md
+++ b/blog/2020-11-23-intro.md
@@ -81,7 +81,7 @@ The basic component in `carefree-learn` is called a [`pipe`](https://carefree091
 
 Since most of the deep learning models (neural networks) used in tabular datasets could be represented with `pipe`, developers can therefore focus on implementing one of its components (namely `extractor` and `head`), instead of having to care about the whole pipeline.
 
-We've provided a detailed documention on [how to build your own models](https://carefree0910.me/carefree-learn-doc/docs/developer-guides/customization), as well as an interesting [example](https://carefree0910.me/carefree-learn-doc/docs/user-guides/examples#operations) to guide you step by step. Please feel free to check them out and enjoy yourself!
+We've provided a detailed documention on [how to build your own models](https://carefree0910.me/carefree-learn-doc/docs/developer-guides/customization), as well as an interesting [example](https://carefree0910.me/carefree-learn-doc/docs/examples/operations) to guide you step by step. Please feel free to check them out and enjoy yourself!
 
 
 ## Why PyTorch?
@@ -91,7 +91,7 @@ The reason why I choosed [PyTorch](https://pytorch.org/) has already been mentio
 
 ## Getting Started
 
-We've provided an [Installation Guide](https://carefree0910.me/carefree-learn-doc/docs/getting-started/installation) as well as some real life [Examples](https://carefree0910.me/carefree-learn-doc/docs/user-guides/examples) to walk you through the basic / advanced usages of carefree-learn. We've also provided a [Production Guide](https://carefree0910.me/carefree-learn-doc/docs/user-guides/production) to show how could we pack the whole pipeline in carefree-learn efficiently into a zip file.
+We've provided an [Installation Guide](https://carefree0910.me/carefree-learn-doc/docs/getting-started/installation) as well as some real life [Examples](https://carefree0910.me/carefree-learn-doc/docs/examples/iris) to walk you through the basic / advanced usages of carefree-learn. We've also provided a [Production Guide](https://carefree0910.me/carefree-learn-doc/docs/user-guides/production) to show how could we pack the whole pipeline in carefree-learn efficiently into a zip file.
 
 
 ## AutoML on Iris
@@ -153,4 +153,4 @@ Please refer to our [documentation](https://carefree0910.me/carefree-learn-doc/d
 
 Contained in this article is just a subset of the features that carefree-learn offers. Additional capabilities include [Distributed Training](https://carefree0910.me/carefree-learn-doc/docs/user-guides/distributed#distributed-training), onnx export for [Production](https://carefree0910.me/carefree-learn-doc/docs/user-guides/production), and more.
 
-To learn more about carefree-learn, check out the [Examples](https://carefree0910.me/carefree-learn-doc/docs/user-guides/examples) with jupyter notebooks included, as well as the [Developer's Guide](https://carefree0910.me/carefree-learn-doc/docs/developer-guides/customization) to see how do we customize models with carefree-learn. We sincerely hope that carefree-learn could help you either deal with tabular datasets easier or develop new algorithms on tabular datasets easier, and any contributions to carefre-learn would truly be welcomed.
+To learn more about carefree-learn, check out the [Examples](https://carefree0910.me/carefree-learn-doc/docs/examples/iris) with jupyter notebooks included, as well as the [Developer's Guide](https://carefree0910.me/carefree-learn-doc/docs/developer-guides/customization) to see how do we customize models with carefree-learn. We sincerely hope that carefree-learn could help you either deal with tabular datasets easier or develop new algorithms on tabular datasets easier, and any contributions to carefre-learn would truly be welcomed.
