--- a/blog/2021-10-29-v0.2.0.md
+++ b/blog/2021-10-29-v0.2.0.md
@@ -4,7 +4,7 @@ title: Deep Learning ❤️ PyTorch
 author: carefree0910
 author_title: Individual Developer
 author_url: https://github.com/carefree0910
-author_image_url: /static/img/avatar.jfif
+author_image_url: ../static/img/avatar.jfif
 image: https://socialify.git.ci/carefree0910/carefree-learn/image?description=1&descriptionEditable=Deep%20Learning%20%E2%9D%A4%EF%B8%8F%20PyTorch&forks=1&issues=1&logo=https%3A%2F%2Fraw.githubusercontent.com%2Fcarefree0910%2Fcarefree-learn-doc%2Fmaster%2Fstatic%2Fimg%2Flogo.min.svg&pattern=Floating%20Cogs&stargazers=1
 tags: [carefree-learn]
 ---
@@ -280,6 +280,3 @@ cflearn.ml.evaluate(cflearn.MLInferenceData(x, y), metrics=["mae", "mse"], pipel
 ### Model
 
 It's not very straight forward to migrate models from `v0.1.x` to `v0.2.x`, so if you require such migration, feel free to submit an issue and we will analyze the problems case by case!
-
-
-## 
